--- a/views/home.html
+++ b/views/home.html
@@ -1,6 +1,6 @@
-<h1>Shopping List</h1>
+<h1 style="text-align:center">Shopping List</h1>
 
-<p>Welcome to the shopping list application!</p>
+<p style="text-align:center">Welcome to the shopping list application!</p>
 
-<h2>Current List</h2>
-<h4>{{items}}</h4>
+<h2 style="text-align:center">Current List</h2>
+<h4 style="text-align:center">{{items}}</h4>
